--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,93 @@
 a {
     text-decoration: none;
 }
+
+html, body {
+    background-color: #f9f7f0; 
+}
+
+.content__inner {
+    width: 90%;
+    margin: 40px 40px 420px 40px;
+    padding: 100px;
+}
+
+.copy {
+    background: #e9e6dc;
+    border: 1px solid #2e2e27;
+    border-radius: 40px;
+}
+
+h1 {
+    color: #111;
+    font-size: 5em;
+    padding: 0 0 20px 0;
+}
+
+p {
+    font-size: 1.2em;
+    letter-spacing: 0.1px;
+    line-height: 30px;
+    padding-bottom: 40px;
+    text-align: justify;
+}
+
+.fixed__footer {
+    width: 100%;
+    height: 350px;
+    background: #f9f7f0;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: -100;
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+li {
+    text-transform: uppercase;
+    font-size: 0.8em;
+    letter-spacing: 0.1px;
+    line-height: 30px;
+}
+
+.col li:first-child {
+    font-weight: bolder;
+}
+
+.copyright {
+    display: flex;
+    justify-content: space-between;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    letter-spacing: 0.1px;
+    line-height: 30px;
+    opacity: 0.5;
+    margin: 6em 0 0 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
